--- a/css/style.css
+++ b/css/style.css
@@ -1,271 +1,289 @@
-
-
-    
 body {
-    font: normal small-caps normal 14px small-caption;
-    margin: 10px;
-    padding: 10px;
+  font: normal small-caps normal 14px small-caption;
+  margin: 5px;
 }
-  main {
-    padding: 5px;
-    margin: 5px;
-  }
-  h3{
-      margin: 10px;
-      color: blue;
-  }
-  img{
-    margin-right: 10px;
-  }
-  strong {
-    font-size: large;
-    font-weight: bolder;
-    color: rgb(73, 21, 196);
-  }
- 
-  .center {
-    float: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 5px;
-  }
-  
-  .top {
-    position: relative;
-    overflow: hidden;
-    margin: 5px;
-  
-  }
-  
-  .right {
-    float: right;
-    margin: 5px;
-  
-  }
 
-  nav li {
-    float: left;
-    list-style-type: none;
-  }
-  
-  li a {
-    display: block;
-    color: rgb(44, 39, 39);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  li a:hover {
-    background-color: rgb(110, 113, 238);
-  }
+main {
+  padding: 5px;
+}
 
-  ul {
-    list-style-type:circle;
-    margin: 5px;
-    padding: 0;
-  }
+h3 {
+  margin: 5px;
+  color: blue;
+  font-size: x-large;
+}
 
+img {
+  margin-right: 10px;
+}
 
-  .container {
-    border-top-left-radius: 37px 140px;
-    border-top-right-radius: 23px 130px;
-    border-bottom-left-radius: 110px 19px;
-    border-bottom-right-radius: 120px 24px;
-  
-    display: block;
-    position: relative;
-    border: solid 3px #6e7491;
-    padding: 100px 200px;
-    max-width: 1000px;
-    width: 100%;
-    margin: 30px auto 0;
-    font-size: 17px;
-    line-height: 28px;
-    transform: rotate(-1deg);
-    box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
-    transition: all 0.13s ease-in;
-  }
-  
-  .container:hover {
-    transform: translateY(-10px) rotate(1deg);
-    box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
-  }
-  
-  .container:hover .border {
-    transform: translateY(4px) rotate(-5deg);
-  }
-  
-  .border {
-    position: absolute;
-    transition: all 0.13s ease-in;
-  }
-  
-  .border:before,
-  .border:after {
-    color: #515d9c;
-    font-size: 15px;
-    position: absolute;
-  }
-  
-  .tl {
-    position: absolute;
-    left: -50px;
-    top: -63px;
-    font-weight: 600;
-  }
-  
-  .tl:before {
-    content: "37px";
-    left: 120px;
-    top: 30px;
-  }
-  
-  .tl:after {
-    content: "140px";
-    left: 0px;
-    top: 80px;
-  }
-  
-  .tr {
-    right: -50px;
-    top: -63px;
-    font-weight: 600;
-  }
-  
-  .tr:before {
-    content: "23px";
-    left: 0;
-    top: 30px;
-  }
-  
-  .tr:after {
-    content: "130px";
-    left: 130px;
-    top: 80px;
-  }
-  
-  .bl {
-    left: -50px;
-    bottom: -71px;
-    font-weight: 600;
-  }
-  
-  .bl:before {
-    content: "110px";
-    left: 120px;
-    top: -30px;
-  }
-  
-  .bl:after {
-    content: "19px";
-    left: 0px;
-    top: -90px;
-  }
-  
-  .br {
-    right: -50px;
-    bottom: -63px;
-    font-weight: 600;
-  }
-  
-  .br:before {
-    content: "120px";
-    left: 0;
-    top: -30px;
-  }
-  
-  .br:after {
-    content: "24px";
-    right: -10px;
-    top: -80px;
-  }
-  
-  pre {
-    background: #edeff5;
-    padding: 20px;
-  }
+strong {
+  font-size: large;
+  font-weight: bolder;
+  color: rgb(73, 21, 196);
+}
 
-  .container-sales{
-    border-top-left-radius: 37px 140px;
-    border-top-right-radius: 23px 130px;
-    border-bottom-left-radius: 110px 19px;
-    border-bottom-right-radius: 120px 24px;
-  
-    display: block;
-    position: relative;
-    border: solid 3px #6e7491;
-    padding: 100px 200px;
-    max-width: 1000px;
-    width: 100%;
-    margin: 30px auto 0;
-    font-size: 17px;
-    line-height: 28px;
-    transform: rotate(0deg);
-    box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
-    transition: all 0.13s ease-in;
-  }
+.center {
+  float: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 5px;
+}
 
-  .button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 18px;
-    cursor: pointer;
-    text-align: center;
-    text-decoration: none;
-    outline: none;
-    color: #fff;
-    background-color: #253fd3;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0 6px rgb(185, 185, 185);
-  }
-  
-  .button:hover {background-color: #5f5de7}
-  
-  .button:active {
-    background-color: #d8dbe7;
-    box-shadow: 0 3px rgb(150, 149, 149);
-    transform: translateY(4px);
-  }
+.top {
+  position: relative;
+  overflow: hidden;
+  margin: 5px;
+}
 
-   table {
-    border-collapse: collapse;
-    margin: 25px 0;
-    font-size: 0.9em;
-    font-family: sans-serif;
-    min-width: 400px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-  }
+.right {
+  float: right;
+  margin: 5px;
+}
 
-  th{
-    background-color: #33298b;
-    color: #e4dcdc;
-    text-align: left;
-    padding: 12px 15px;
-  }
+nav li {
+  float: left;
+  list-style-type: none;
+}
 
-  tr{
-    background-color: #ebeaf7;
-    color: #111010;
-    text-align: left;
-  }
+li a {
+  display: block;
+  color: rgb(44, 39, 39);
+  text-align: center;
+  padding: 10px 14px;
+  text-decoration: none;
+}
 
-  td{
-    padding: 12px 15px;
-  }
+li a:hover {
+  background-color: rgb(110, 113, 238);
+}
 
-  tr:nth-of-type(even){
-    background-color: #d1cece;
-  }
+ul {
+  list-style-type: circle;
+  margin: 5px;
+}
 
-  tr:last-of-type{
-    border-bottom: 2px solid #4334c4;
-  }
+.container {
+  border-top-left-radius: 37px 140px;
+  border-top-right-radius: 23px 130px;
+  border-bottom-left-radius: 110px 19px;
+  border-bottom-right-radius: 120px 24px;
+  display: block;
+  position: relative;
+  border: solid 3px #6e7491;
+  padding: 90px 200px;
+  max-width: 1000px;
+  width: 100%;
+  margin: 40px 30px 0;
+  font-size: 17px;
+  line-height: 28px;
+  transform: rotate(-1deg);
+  box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+  transition: all 0.13s ease-in;
+}
 
-  tr.active-row {
-    font-weight: bold;
-    color: #493cbd;
-} 
+.container:hover {
+  transform: translateY(-10px) rotate(1deg);
+  box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+}
+
+.container:hover .border {
+  transform: translateY(4px) rotate(-2deg);
+}
+
+.border {
+  position: absolute;
+  transition: all 0.13s ease-in;
+}
+
+.border:before, .border:after {
+  color: #515d9c;
+  font-size: 15px;
+  position: absolute;
+}
+
+.tl {
+  position: absolute;
+  left: -50px;
+  top: -63px;
+  font-weight: 600;
+}
+
+.tl:before {
+  content: "37px";
+  left: 120px;
+  top: 30px;
+}
+
+.tl:after {
+  content: "140px";
+  left: 0px;
+  top: 80px;
+}
+
+.tr {
+  right: -50px;
+  top: -63px;
+  font-weight: 600;
+}
+
+.tr:before {
+  content: "23px";
+  left: 0;
+  top: 30px;
+}
+
+.tr:after {
+  content: "130px";
+  left: 130px;
+  top: 80px;
+}
+
+.bl {
+  left: -50px;
+  bottom: -71px;
+  font-weight: 600;
+}
+
+.bl:before {
+  content: "110px";
+  left: 120px;
+  top: -30px;
+}
+
+.bl:after {
+  content: "19px";
+  left: 0px;
+  top: -90px;
+}
+
+.br {
+  right: -50px;
+  bottom: -63px;
+  font-weight: 600;
+}
+
+.br:before {
+  content: "120px";
+  left: 0;
+  top: -30px;
+}
+
+.br:after {
+  content: "24px";
+  right: -10px;
+  top: -80px;
+}
+
+pre {
+  background: #aceeee;
+  padding: 20px;
+  width: auto;
+}
+
+.container-sales {
+  border-top-left-radius: 37px 140px;
+  border-top-right-radius: 23px 130px;
+  border-bottom-left-radius: 110px 19px;
+  border-bottom-right-radius: 120px 24px;
+  display: block;
+  position: relative;
+  border: solid 3px #6e7491;
+  padding: 100px 200px;
+  max-width: 1000px;
+  width: 100%;
+  margin: 10px auto 0;
+  font-size: 17px;
+  line-height: 28px;
+  transform: rotate(0deg);
+  box-shadow: 3px 15px 8px -10px rgba(0, 0, 0, 0.3);
+  transition: all 0.13s ease-in;
+}
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #253fd3;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 6px rgb(185, 185, 185);
+}
+
+.button:hover {
+  background-color: #5f5de7
+}
+
+.button:active {
+  background-color: #d8dbe7;
+  box-shadow: 0 3px rgb(150, 149, 149);
+  transform: translateY(4px);
+}
+
+table {
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 0.9em;
+  font-family: sans-serif;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+th {
+  background-color: #33298b;
+  color: #e4dcdc;
+  text-align: left;
+  padding: 12px 15px;
+}
+
+tr {
+  background-color: #ebeaf7;
+  color: #111010;
+  text-align: left;
+}
+
+td {
+  padding: 12px 15px;
+}
+
+tr:nth-of-type(even) {
+  background-color: #d1cece;
+}
+
+tr:last-of-type {
+  border-bottom: 2px solid #4334c4;
+}
+
+tr.active-row {
+  font-weight: bold;
+  color: #493cbd;
+}
+
+.locImg {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  padding: 10px;
+  gap: 15px;
+}
+
+em {
+  color: rgb(27, 204, 27);
+}
+
+dl {
+  color: rgb(248, 46, 46);
+}
+
+.threeImg {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 10px;
+  gap: 15px;
+}
