--- a/css/style.css
+++ b/css/style.css
@@ -203,16 +203,16 @@ pre {
 }
 
 .button {
+  outline: none;
+  border: none;
+  color: #fff;
   display: inline-block;
   padding: 10px 20px;
   font-size: 18px;
   cursor: pointer;
   text-align: center;
   text-decoration: none;
-  outline: none;
-  color: #fff;
   background-color: #253fd3;
-  border: none;
   border-radius: 15px;
   box-shadow: 0 6px rgb(185, 185, 185);
 }
@@ -286,4 +286,95 @@ dl {
   grid-template-columns: auto auto auto;
   padding: 10px;
   gap: 15px;
+}
+
+.form-style {
+  max-width: 500px;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+
+.form-style label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form-style label>span {
+  float: left;
+  width: 100px;
+  color: #3336ff;
+  font-weight: bold;
+  font-size: 13px;
+  text-shadow: 1px 1px 1px #fff;
+}
+
+.form-style fieldset {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  margin: 0px 0px 10px 0px;
+  border: 3px solid #0004ff;
+  padding: 20px;
+  background: #a2a4f7;
+  box-shadow: inset 0px 0px 15px #FFE5E5;
+  -moz-box-shadow: inset 0px 0px 15px #FFE5E5;
+  -webkit-box-shadow: inset 0px 0px 15px #FFE5E5;
+}
+
+.form-style fieldset legend {
+  color: #3437e9;
+  border-top: 1px solid #1b51e6;
+  border-left: 1px solid #1b51e6;
+  border-right: 1px solid #1b51e6;
+  border-radius: 5px 5px 0px 0px;
+  -webkit-border-radius: 5px 5px 0px 0px;
+  -moz-border-radius: 5px 5px 0px 0px;
+  background: #FFF4F4;
+  padding: 0px 8px 3px 8px;
+  box-shadow: -0px -1px 2px #F1F1F1;
+  -moz-box-shadow: -0px -1px 2px #F1F1F1;
+  -webkit-box-shadow: -0px -1px 2px #F1F1F1;
+  font-weight: normal;
+  font-size: 12px;
+}
+
+.form-style textarea {
+  width: 250px;
+  height: 100px;
+}
+
+.form-style input[type=text], .form-style input[type=date], .form-style input[type=datetime], .form-style input[type=number], .form-style input[type=search], .form-style input[type=time], .form-style input[type=url], .form-style input[type=email], .form-style select, .form-style textarea {
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border: 1px solid #FFC2DC;
+  outline: none;
+  color: #5a5cdf;
+  padding: 5px 8px 5px 8px;
+  box-shadow: inset 1px 1px 4px #FFD5E7;
+  -moz-box-shadow: inset 1px 1px 4px #FFD5E7;
+  -webkit-box-shadow: inset 1px 1px 4px #FFD5E7;
+  background: #FFEFF6;
+  width: 50%;
+}
+
+.form-style input[type=submit], .form-style input[type=button] {
+  margin-left: 100px;
+  margin-top: 10px;
+  outline: none;
+  border: none;
+  color: rgb(245, 241, 241);
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  background-color: #253fd3;
+  border-radius: 15px;
+  box-shadow: 0 6px rgb(24, 24, 24);
+}
+
+.required {
+  color: red;
+  font-weight: normal;
 }
