--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Lobster', cursive;  margin: 5px;
+  font-family: 'Lobster', cursive;
+  margin: 5px;
 }
 
 main {
@@ -184,6 +185,7 @@ pre {
 }
 
 .container-sales {
+  font-family: 'Permanent Marker', cursive;
   border-top-left-radius: 37px 140px;
   border-top-right-radius: 23px 130px;
   border-bottom-left-radius: 110px 19px;
@@ -231,7 +233,7 @@ table {
   border-collapse: collapse;
   margin: 25px 0;
   font-size: 0.9em;
-  font-family: sans-serif;
+  font-family: 'Permanent Marker', cursive;
   min-width: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
@@ -290,7 +292,7 @@ dl {
 
 .form-style {
   max-width: 500px;
-  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+  font-family: 'Merienda', cursive;
 }
 
 .form-style label {
